--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,7 +6,7 @@ target 'IORequestable_Example' do
   target 'IORequestable_Tests' do
     inherit! :search_paths
 
-    pod 'Quick', '~> 1.2.0'
-    pod 'Nimble', '~> 7.0.2'
+    pod 'Quick'
+    pod 'Nimble'
   end
 end
