chore: Update Swift version

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,13 +1,18 @@
+platform :ios, '11.0'
+
 use_frameworks!
 
 target 'IORequestable_Example' do
   pod 'IORequestable', :path => '../'
   pod 'IORequestable/RxSwift', :path => '../'
+end
 
-  target 'IORequestable_Tests' do
-    inherit! :search_paths
 
-    pod 'Quick'
-    pod 'Nimble'
+# Post Install
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+    end
   end
 end
